Slides updated to take into account ng2 modifsÃ

--- a/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection3/aboutChangeDetection3.html
+++ b/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection3/aboutChangeDetection3.html
@@ -18,7 +18,7 @@
 		</editortab>
 	</li>
 	<li>
-		The different strategies are
+		The available strategies are:
 		<ul>
 			<li>
 				<em>CheckAlways</em>: default value, each time it has to check,
@@ -28,9 +28,7 @@
 				<em>OnPush</em>: <em>ng2</em> will limit the observations in the tree
 				to components inputs <em>which have changed</em>
 			</li>
-			<li>
-				<em>Detached / CheckOnce / Checked</em>: Used internally
-			</li>
+
 		</ul>
 	</li>
 </ul>
