--- a/trainingapp/src/components/slides/mainConcepts/aboutForms6/aboutForms6.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutForms6/aboutForms6.html
@@ -5,7 +5,7 @@
 
 <ul>
 	<li>
-		In previous samples, we used the <em>required</em> validator with <em>Control</em> / <em>ControlGroup</em> and <em>FormBuilder</em> tools to add some behavior when something goes wrong! (no data into the input)
+		In previous samples, we used the <em>required</em> validator with our <em>FormControl</em>
 	</li>
 	<li>
 		The native validators provided by <em>Angular2</em> are:
