--- a/trainingapp/src/components/slides/mainConcepts/aboutPipes8/aboutPipes8.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutPipes8/aboutPipes8.html
@@ -16,17 +16,18 @@
 		Implement the <em>PipeTransform</em> interface
 	</li>
 	<li>
+		Declare your pipe in your module <em>declarations</em> field
+	</li>
+	<li>
 		Below is an example of "Hello World" <em>Pipe</em>
 	</li>
 </ul>
 
 
 <editor [ng2]="true" [plunker]="true" description="Using pipes">
-    <editortab title="src/app.ts" fileType="js" ngNonBindable>
+    <editortab title="app/app.component.ts" fileType="js" ngNonBindable>
 import {Component, Pipe, PipeTransform} from '@angular/core';
-import {LowerCasePipe} from '@angular/common';
-import {bootstrap} from '@angular/platform-browser-dynamic';
-import {SubCmp} from './sub-cmp';
+import {BrowserModule} from '@angular/platform-browser';
 
 @Pipe({
 	name:'helloWorld'
@@ -41,10 +42,14 @@ class HelloWorldPipe implements PipeTransform{
     selector: 'app',
     template: `
     	&lt;p&gt; {{'John' | helloWorld }}&lt;/p&gt;
-    `,
-    pipes: [HelloWorldPipe]
+    `
 })
 export class App {}
 
+export const ModuleDefs= {
+	bootstrap: [App],
+	imports: [BrowserModule],
+	declarations: [App, HelloWorldPipe]
+}
     </editortab>
 </editor>
