--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates6/aboutTemplates6.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates6/aboutTemplates6.html
@@ -21,30 +21,35 @@
 </ul>
 
 
+
 <editor [ng2]="true" [plunker]="true" description="Using Parameters" >
-    <editortab title="src/app.ts" fileType="js" ngNonBindable>
+    <editortab title="app/app.component.ts" fileType="js" ngNonBindable>
 import {Component} from '@angular/core';
-import {bootstrap} from '@angular/platform-browser-dynamic';
+import {BrowserModule} from '@angular/platform-browser';
 import {SubCmp} from './sub-cmp';
 
 @Component({
     selector: 'app',
-    template: '&lt;sub-cmp name="john" [friends]="friends" &gt;&lt;/sub-cmp&gt;',
-    directives: [SubCmp]
+    template: '&lt;sub-cmp name="john" [friends]="friends" &gt;&lt;/sub-cmp&gt;'
 })
-export class App {
+class App {
     name: string= 'john';
-    friends: string[]= ['bob', 'dylan']; 
+    friends: string[]= ['bob', 'dylan'];    
 }
 
+export const ModuleDefs= {
+    bootstrap: [App],
+    declarations:[ App, SubCmp],
+    imports: [BrowserModule]
+}
     </editortab>
-    <editortab title="src/sub-cmp.ts" fileType="js" ngNonBindable>
+    <editortab title="app/sub-cmp.ts" fileType="js" ngNonBindable>
 import {Component, Input} from '@angular/core';
 
 @Component({
     selector: 'sub-cmp',
     template: `
-    &lt;h1&gt; Name: {{name}}&lt;/h1&gt;
+    &lt;h1>Name: {{name}}&lt;/h1&gt;
 
     &lt;p&gt;Friends: &lt;/p&gt;
     &lt;ul&gt;
