--- a/trainingapp/src/components/slides/mainConcepts/pwForms/pwForms.html
+++ b/trainingapp/src/components/slides/mainConcepts/pwForms/pwForms.html
@@ -19,8 +19,8 @@
 		Add a form element arround your textarea and send button
 	</li>
 	<li>
-		Use the <em>FormBuilder</em> api to create a <em>ControlGroup</em> containing a custom control for
-		the message. The control has to define 2 validators:
+		Use the <em>FormBuilder</em> api to create a <em>FormGroup</em> containing a custom control for
+		the message. The control has to contain 2 validators:
 		<ul>
 			<li>required</li>
 			<li>a new custom validator which disables the submit button while the message contains any of these characters:
