--- a/trainingapp/src/components/slides/mainConcepts/services2/services2.html
+++ b/trainingapp/src/components/slides/mainConcepts/services2/services2.html
@@ -50,6 +50,10 @@ import {Http, Response, RequestOptions, Headers} from '@angular/http';
 import 'rxjs/add/operator/toPromise';
 import {User} from './user-bean.ts';
 
+@Component({
+    selector:'my-cmp',
+    //...
+})
 export class MyCmp{
     constructor(private http: Http){}
 
