--- a/trainingapp/src/components/slides/mainConcepts/aboutPipes3/aboutPipes3.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutPipes3/aboutPipes3.html
@@ -11,10 +11,9 @@
 </ul>
 
 <editor [ng2]="true" [plunker]="true" description="Using pipes">
-    <editortab title="src/app.ts" fileType="js" ngNonBindable>
+    <editortab title="app/app.component.ts" fileType="js" ngNonBindable>
 import {Component} from '@angular/core';
-import {bootstrap} from '@angular/platform-browser-dynamic';
-import {SubCmp} from './sub-cmp';
+import {BrowserModule} from '@angular/platform-browser';
 
 @Component({
     selector: 'app',
@@ -29,6 +28,12 @@ export class App {
 	public decimal2: number= 12.5;
 
 	public format: string= '3.2-3';
+}
+
+export const ModuleDefs= {
+	bootstrap: [App],
+	imports: [BrowserModule],
+	declarations: [App]
 }
 
     </editortab>
