--- a/trainingapp/src/components/slides/mainConcepts/aboutRouter8/aboutRouter8.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutRouter8/aboutRouter8.html
@@ -1,154 +1,268 @@
 <h2 class="standard-title">
 	<span class="title-category">Main Concepts</span>
-	Router - Child Routers
+	Router - limit access to routes
 </h2>
 
 <p>
-	Let's make our <em>TodoDetails</em> route 
-	a route of our TodoListCmp component
+	Finally, we can now create routes, sub routes and load them dinamically.
+	We're missing one last feature, the control to leave or access a component.
+	The basic example is to authorize the access to a route only for a logged
+	user which has enough rights. But it could also be don't authorize the user
+	to leave this form component while he didn't fill the form...
 </p>
 <ul>
+	<li>For that, with <em>ng2</em> we are using <em>Guards</em></li>
 	<li>
-		We only use <em>@RouteConfig</em> on the <em>TodoListCmp</em>
-		to create a child router and its routes
+		We have guards for the following scenarios (copy/paste from official doc)
+		<ul>
+			<li>
+				<em>CanActivate</em>: to mediate navigation to a route
+			</li>
+			<li>
+				<em>CanActivateChild</em>: to mediate navigation to a child route
+			</li>
+			<li>
+				<em>CanDeactivate</em>: to mediate navigation away from the current route
+			</li>
+			<li>
+				<em>Resolve</em>: to perform route data retrieval before route activation
+			</li>
+			<li>
+				<em>CanLoad</em>: to mediate navigation to a feature module loaded asynchronously
+			</li>
+		</ul>
 	</li>
 	<li>
-		The new routes pathes are relative to the component route
+		In our previous example, let's add a checkbox to ask the user to accept some conditions
+		before being able to load the <em>todo</em> module
 	</li>
 </ul>
 
-<editor [ng2]="true" [plunker]="true" description="Using pipes">
-    <editortab title="src/app.ts" fileType="js" ngNonBindable>
-import {Component, provide} from '@angular/core';
-import {APP_BASE_HREF} from '@angular/common';
-import {Router} from '@angular/router-deprecated';
 
-//Router dependencies
-import {
-	Router, RouteConfig, ROUTER_PROVIDERS, 
-	LocationStrategy, HashLocationStrategy,  
-	ROUTER_DIRECTIVES
-} from '@angular/router-deprecated';
 
-// Component Views Dependencies
-import {TodoListCmp} from 'src/todolist-cmp';
-import {TodoFormCmp} from 'src/todoform-cmp';
+
+
+<editor [ng2]="true" [plunker]="true">
+    <editortab [title]="'app/app.component.ts'" [fileType]="'js'" ngNonBindable>
+import {Component} from '@angular/core';
+import {BrowserModule} from '@angular/platform-browser';
+import {Home} from './home.component';
+
+import {routesModule} from './app.routing';
+import {ConditionsGuard} from './conditionsguard.service';
 
 @Component({
-    selector: 'app',
-    template: ` 
-&lt;nav>
-	&lt;ul&gt;
-		&lt;li&gt;&lt;a (click)="goTo(['TodoList', 'TodoDetails', {id: 1}])"&gt;Go to Todo List&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a (click)="goTo(['TodoForm'])"&gt;Go to Todo Form&lt;/a&gt;&lt;/li&gt;
-	&lt;/ul&gt;
-&lt;/nav&gt;
-&lt;router-outlet&gt;&lt;/router-outlet&gt;
-    `,
-    directives: [ROUTER_DIRECTIVES],
-    providers:[
-    	ROUTER_PROVIDERS,
-    	provide(APP_BASE_HREF, {useValue:'/'}),
-		provide('TODOS', {
-			useValue:[{id: 1, label: 'todo 1'}, {id: 2, label: 'todo 2'}]
-		})
-    ]      
-})
-@RouteConfig([
-	{path:'/todolist/...', name:'TodoList', component:TodoListCmp},
-	{path:'/todoform', name:'TodoForm', component:TodoFormCmp}
-])
-export class App {
-	constructor(private router: Router){}
-
-	goTo(routeName: string[]){
-		this.router.navigate(routeName);
-	}
-}
-
-    </editortab>
-   <editortab title="src/todolist-cmp.ts" fileType="js" ngNonBindable>
-
-import {Component, Inject} from '@angular/core';
-import {RouteConfig, ROUTER_DIRECTIVES} from '@angular/router-deprecated';
-import {TodoDetailsCmp} from 'src/tododetails-cmp';
-
-@Component({
-	selector:'todolist',
-	template:`
-&lt;h1&gt;Todo List&lt;/h1&gt;
-&lt;p&gt;...&lt;/p&gt;
+    selector:'app',
+    template:`
+&lt;h1&gt; min app &lt;/h1&gt;
 &lt;ul&gt;
-	&lt;li *ngFor="#todo of todos"&gt;
-		&lt;a [routerLink]="['TodoDetails', {id: todo.id}]"&gt;{{todo.id}} {{todo.label}}&lt;/a&gt;
-	&lt;/li&gt;
+    &lt;li&gt;
+        &lt;a [routerLink]="['home']"&gt;home&lt;/a&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+        &lt;a [routerLink]="['todo']"&gt;About todos&lt;/a&gt;
+    &lt;/li&gt;
 &lt;/ul&gt;
 &lt;router-outlet&gt;&lt;/router-outlet&gt;
-	`,
-	directives: [ROUTER_DIRECTIVES]
+    `
 })
-@RouteConfig([
-  {path:'/:id', name:'TodoDetails', component: TodoDetailsCmp}
-])
-export class TodoListCmp{
-  public todos: {id: int, label: string};
-	constructor(@Inject('TODOS') public todos:{id: int, label: string}){
+class AppComponent {}
+
+export const ModuleDefs= {
+    imports:[BrowserModule, routesModule],
+    declarations:[AppComponent, Home],
+    providers: [ConditionsGuard],
+    bootstrap: [AppComponent]
+}
+	</editortab>
+
+	<editortab [title]="'app/app.routing.ts'" [fileType]="'js'" ngNonBindable >
+import {RouterModule} from '@angular/router';
+import {Home} from './home.component';
+import {ConditionsGuard} from './conditionsguard.service';
+
+const routesDefs= [
+    { path:'home', component: Home },
+    { 
+    	path:'todo', 
+    	loadChildren: 'app/todo/todo.module#TodoModule',
+    	canLoad: [ConditionsGuard]
+     },
+    { path: '', redirectTo: 'home', pathMatch: 'full'}
+];	
+
+export const routesModule= RouterModule.forRoot(routesDefs);
+	</editortab>
+
+	<editortab [title]="'app/conditionsguard.service.ts'" [fileType]="'js'" ngNonBindable >
+import {Injectable} from '@angular/core';
+
+@Injectable()
+export class ConditionsGuard implements CanLoad {
+  conditionsAccepted= false;
+
+  canLoad(route: Route): boolean {
+    return this.conditionsAccepted;
+  }
+
+}
+	</editortab>
+
+	<editortab [title]="'app/home.component.ts'" [fileType]="'js'" ngNonBindable >
+import {Component} from '@angular/core';
+import {ConditionsGuard} from './conditionsguard.service';
+
+@Component({
+    selector:'home',
+    template:`
+    	&lt;h2&gt; Home &lt;/h2&gt;
+    	&lt;input type="checkbox" (change)="setAcceptation($event)"&gt; Do you accept everything
+    `
+})
+export class Home{
+	constructor(public conditionsGuard: ConditionsGuard){}
+	setAcceptation= (e) => {
+		if (e.target.checked){ this.conditionsGuard.conditionsAccepted= true;}
+		else { this.conditionsGuard.conditionsAccepted= false;}
 	}
 }
-    </editortab>
-   <editortab title="src/todoform-cmp.ts" fileType="js" ngNonBindable>
+	</editortab>
+
+	<editortab [title]="'app/todo/todo.module.ts'" [fileType]="'js'" ngNonBindable >
+import {NgModule} from '@angular/core';
+import {CommonModule} from '@angular/common';
+
+import {todoRoutesModule} from './todo.routing';
+import {Todo} from './todo.component';
+import {TodoList} from './todolist.component';
+import {TodoDetails} from './tododetails.component';
+import {TodoListService} from './todolist.service';
+
+@NgModule({
+	imports:[CommonModule, todoRoutesModule],
+	providers: [TodoListService],
+	declarations:[Todo, TodoList, TodoDetails]
+})
+export class TodoModule{}
+	</editortab>
+
+	<editortab [title]="'app/todo/todo.routing.ts'" [fileType]="'js'" ngNonBindable >
+import {RouterModule} from '@angular/router';
+
+import {Todo} from './todo.component';
+import {TodoList} from './todolist.component';
+import {TodoDetails} from './tododetails.component';
+
+const todoRoutesDefs= [
+	{
+		path: '', 
+		component: Todo,
+		children: [
+		    { path: 'todolist', component: TodoList },
+		    { path: 'tododetails/:id', component: TodoDetails },
+		    { path: '', redirectTo: 'todolist', pathMatch: 'full'}
+		]
+	}
+];
+
+export const todoRoutesModule= RouterModule.forChild(todoRoutesDefs);
+	</editortab>
+	<editortab [title]="'app/todo/todolist.service.ts'" [fileType]="'js'" ngNonBindable >
+
+export class TodoListService{
+	todos: any[]= [
+			{id:0, label:'todo 0'},
+			{id:1, label:'todo 1'},
+			{id:2, label:'todo 2'}
+		];
+
+	getList= () => {
+		return this.todos;
+	}
+	getTodo(id: number){
+		return this.todos[id];
+	}
+}
+	</editortab>
+
+	<editortab [title]="'app/todo/todo.component.ts'" [fileType]="'js'" ngNonBindable >
 import {Component} from '@angular/core';
 
 @Component({
-	selector:'todoform',
-	template:`
-&lt;h1&gt;Todo Form&lt;/h1&gt;
-&lt;p&gt;...&lt;/p&gt;
-	`
+    selector:'todo',
+    template:`
+    	&lt;h2&gt; About Todos &lt;/h2&gt;
+    	&lt;ul&gt;
+		    &lt;li&gt;
+		        &lt;a [routerLink]="['todolist']"&gt;todo list&lt;/a&gt;
+		    &lt;/li&gt;
+		    &lt;li&gt;
+		        &lt;a [routerLink]="['tododetails']"&gt;todo details&lt;/a&gt;
+		    &lt;/li&gt; 
+    	&lt;/ul&gt;
+    	&lt;router-outlet&gt;&lt;/router-outlet&gt;
+    `
 })
-export class TodoFormCmp{}
-    </editortab>  
-    <editortab title="src/tododetails-cmp.ts" fileType="js" ngNonBindable>
-import {Component, Inject, OnInit} from '@angular/core';
-import {RouteParams} from '@angular/router';
+export class Todo{}
+	</editortab>	
+
+	<editortab [title]="'app/todo/todolist.component.ts'" [fileType]="'js'" ngNonBindable >
+import {Component} from '@angular/core';
+import {TodoListService} from './todolist.service';
+import {Router} from '@angular/router';
 
 @Component({
-	selector:'tododetails',
-	template:`
-&lt;h1&gt;Todo Detail&lt;/h1&gt;
+    selector:'todolist',
+    template:`
+&lt;h2&gt; Todo List &lt;/h2&gt;
+&lt;ul&gt;
+	&lt;li *ngFor="let todo of todos;"&gt;
+		&lt;a href="#" (click)="goto(todo.id)"&gt;
+			{{todo.label}}
+		&lt;/a&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
+    `
+})
+export class TodoList{
+	todos: any[];
+	constructor(private router: Router, todoService: TodoListService){
+		this.todos= todoService.getList();
+	}
+	
+	goto= (id: number) => {
+	  this.router.navigate(['todo/tododetails', id]);
+	  return false;
+	}
+}
+	</editortab>
+
+	<editortab [title]="'app/todo/tododetails.component.ts'" [fileType]="'js'" ngNonBindable >
+import {Component} from '@angular/core';
+import {TodoListService} from './todolist.service';
+import {ActivatedRoute} from '@angular/router';
+
+@Component({
+    selector:'tododetails',
+    template:`
+&lt;h2&gt;Todo details&lt;/h2&gt;
 &lt;ul&gt;
 	&lt;li&gt;Id: {{todo.id}}&lt;/li&gt;
 	&lt;li&gt;Label: {{todo.label}}&lt;/li&gt;
 &lt;/ul&gt;
-	`
+    `
 })
-export class TodoDetailsCmp implements OnInit{
-	todo: {id: int, label: string};
+export class TodoDetails{
+	todo: any;
+	constructor(private todoService: TodoListService, private route: ActivatedRoute){}
 
-	constructor(
-		@Inject('TODOS') public todos:{id: int, label: string},
-		private routeParams: RouteParams
-	){}
-
-	ngOnInit() {
-		let id = this.routeParams.get('id');
-		this.todos.forEach( (val, index) => {
-			if (val.id == id){
-				this.todo= val;
-			}
-		} );
+	ngOnInit(){
+	  this.route.params.forEach((params: Params) => {
+	     let id = parseInt(params['id']); 
+	     this.todo= this.todoService.getTodo(id);
+	   });
 	}
-
 }
-    </editortab>
+	</editortab>
 </editor>
 
-<p class="exercise">
-	Note that in <em>app.ts</em>,
-	we don't have anymore dependency to <em>TodoDetailsCmp</em>!
-</p>
-
-<p class="todo">
-	Doesn't work in rc.1, will be fixed with
-	<a href="https://github.com/angular/angular/issues/8245#issuecomment-224328645" target="_blank">this issue</a>
-</p>
