--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates10/aboutTemplates10.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates10/aboutTemplates10.html
@@ -13,39 +13,21 @@
         use custom <em>Web Components</em>
     </li>
     <li>
-        To do that, there is a <code>directives</code> attribute
-        on <em>@Components</em>
+        To do that, there is a field named <code>declarations</code> that
+        you have to use on your <em>@NgModule</em> annotation
     </li>
     <li>
         In the example below we are using <em>ngFor</em> (not declared) and <em>SubCmp</em> (declared)
+        <editortab [alone]="true">
+import {CustomComponent} from './custom-cmp';
+
+@NgModule({
+    bootstrap:[...],
+    imports:[...],
+    declarations:[CustomComponent, ...]
+})
+        </editortab>
     </li>
 </ul>
 
 
-<editor [ng2]="true" [plunker]="true" description="Using directive attribute">
-    <editortab title="src/app.ts" fileType="js" ngNonBindable>
-import {Component} from '@angular/core';
-import {bootstrap} from '@angular/platform-browser-dynamic';
-
-@Component({
-    selector: 'sub-cmp',
-    template: `hello {{name}}`,
-    inputs: ['name']
-})
-class SubCmp {}
-
-@Component({
-    selector: 'app',
-    template: `
-    &lt;ul&gt;
-        &lt;li *ngFor="let name of ['john', 'donald']"&gt;
-            &lt;sub-cmp [name]="name"&gt;&lt;/sub-cmp&gt;
-        &lt;/li&gt;
-    &lt;/ul&gt;
-    `,
-    directives: [SubCmp]
-})
-export class App {}
-
-    </editortab>
-</editor>
